# energy-topics

./: .gitignore  Cargo.toml  Justfile  Makefile  pyproject.toml
battery/: .dockerignore  .gitignore  .pre-commit-config.yaml  FRONTEND_PLAN.md  QUANT_PLAN.md  README.md  docker-compose.yaml  main.py  pyproject.toml  test_ping.py
battery/backend/: README.md  requirements.txt
battery/backend/src/: database.py  main.py  models.py  tasks.py  worker.py
battery/backend/src/api/: data_routes.py  job_routes.py  ml_routes.py  optimization_routes.py  setup_routes.py
battery/backend/src/data/: energy_data_provider.py  entsoe_e_data_provider.py  extract_data.py  forecast_load_provider.py  mock_energy_data_provider.py  open_meteo_solar_provider.py
battery/backend/src/optimization/: model_factory.py  optimization_pipeline.py  solver.py
battery/core_api/: Dockerfile  requirements.txt
battery/core_api/src/: main.py
battery/core_api/src/api/: data_routes.py  job_routes.py  ml_routes.py  optimization_routes.py  setup_routes.py
battery/core_api/src/data/: entsoe_e_data_provider.py  extract_data.py  forecast_load_provider.py  open_meteo_solar_provider.py
battery/data/: training_data.parquet
battery/documentation/: documentation.out  documentation.tex
battery/frontend/: Dockerfile  index.html  package.json  tsconfig.json
battery/frontend/src/: App.tsx  main.tsx
battery/frontend/src/components/: Navbar.tsx
battery/frontend/src/context/: SetupContext.tsx
battery/frontend/src/pages/: Dashboard.tsx  GlobalDashboard.tsx  Jobs.tsx
battery/frontend/src/services/: api.ts
battery/graveyard/src_legacy/dashboard/: dashboard.py
battery/graveyard/src_legacy/data/: entsoe_e_data_provider.py  open_meteo_solar_provider.py
battery/init-db/: tables.sql
battery/ml_service/: Dockerfile  README.md  entrypoint.sh  model_evaluation.ipynb  requirements.txt
battery/ml_service/data/: model.pth  scaler.joblib  training_data.parquet
battery/ml_service/data/bentoml/: client_id
battery/ml_service/src/: api.py  data_pipeline.py  main.py  ml_pipeline.py  model_factory.py  service.py  train_data_extraction.py  train_model.py
battery/ml_service/src/data/: training_data.parquet
battery/ml_service/src/external_data/: data_generator.py  load_sensor.py  weather_provider.py
battery/ml_service/src/model/: data_generator.py  predictor.py  train.py
battery/ml_service/src/pipelines/: data_pipeline.py  ml_pipeline.py
battery/notebooks/: README.md  model_evaluation.ipynb  optimization_routine.ipynb  pixi.toml  price_spread_analysis.ipynb  pyproject.toml
battery/optimization_service/: Dockerfile  README.md  requirements.txt
battery/optimization_service/src/: main.py  tasks.py  worker.py
battery/optimization_service/src/optimization/: database_connector.py  model_factory.py  optimization_pipeline.py  solver.py
battery/scripts/: generate_runs.py  generate_runs.sh
battery/src/dashboard/: dashboard.py
battery/src/data/: energy_data_provider.py  extract_data.py  mock_energy_data_provider.py  open_meteo_solar_provider.py
battery/src/optimization/: database_connector.py  model_factory.py  optimization_pipeline.py
latex/: tolling-agreement.aux  (+2 more)
src/rust/tolling_agreement_valuation/: Cargo.toml
src/rust/tolling_agreement_valuation/src/: cli.rs  lib.rs  main.rs
src/rust/tolling_agreement_valuation/src/commands/: calculate_profit.rs  mod.rs  sample_paths.rs  sample_prices.rs
src/rust/tolling_agreement_valuation/src/core/: mod.rs
src/rust/tolling_agreement_valuation/src/core/aad/: mod.rs  tape.rs
src/rust/tolling_agreement_valuation/src/core/aad/variable/: arithmetic.rs  math.rs  mod.rs  ops.rs
src/rust/tolling_agreement_valuation/src/core/analytics/: calculate_profit.rs
src/rust/tolling_agreement_valuation/src/core/common/: cholesky.rs
src/rust/tolling_agreement_valuation/src/core/parameters/: mod.rs  model_parameters.rs  unit_parameters.rs
src/rust/tolling_agreement_valuation/src/core/processes/: geometric_brownian_motion_transformer.rs  jump_diffusion_process_transformer.rs
src/rust/tolling_agreement_valuation/src/core/services/: calculate_greeks.rs  calculate_profit.rs  mod.rs  sample_paths.rs
src/rust/tolling_agreement_valuation/src/core/simulator/: mod.rs  simulate_prices.rs  simulation_result.rs
src/rust/tolling_agreement_valuation/src/core/valuation/: mod.rs  profit_and_loss.rs
src/rust/tolling_agreement_valuation/src/data/: data_reader.rs  market_data.rs  mod.rs  model_parameters.rs  unit_parameters.rs
src/rust/tolling_agreement_valuation/src/data_reader/: csv_reader.rs  json_reader.rs  mod.rs
src/rust/tolling_agreement_valuation/src/engine/: calculate_profit.rs  mod.rs
src/rust/tolling_agreement_valuation/src/processes/: geometric_brownian_motion_transformer.rs  jump_diffusion_process_transformer.rs  mod.rs  simulate_prices.rs  simulation_result.rs
src/rust/tolling_agreement_valuation/src/python/: calculate_greeks.rs  calculate_profit.rs  mod.rs  parameters.rs  sample_paths.rs
tolling/src/rust/tolling_agreement_valuation/: Cargo.toml  pyproject.toml
tolling/src/rust/tolling_agreement_valuation/src/core/common/: mod.rs
tolling/src/rust/tolling_agreement_valuation/src/core/parameters/: unit_parameters.rs
tolling/src/rust/tolling_agreement_valuation/src/core/processes/: jump_diffusion_process_transformer.rs  mod.rs
tolling/src/rust/tolling_agreement_valuation/src/core/services/: calculate_greeks.rs  mod.rs  sample_paths.rs
tolling/src/rust/tolling_agreement_valuation/src/core/simulator/: mod.rs  simulate_prices.rs
tolling/src/rust/tolling_agreement_valuation/src/python/: mod.rs
(+29 files in other folders)
