[project]
name = "tolling-agreement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tolling-agreement-valuation",
]

[tool.uv.workspace]
members = [
    "src/rust/tolling_agreement_valuation",
]

[tool.uv.sources]
tolling-agreement-valuation = { workspace = true }
