[project]
name = "battery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "psycopg>=3.3.3",
    "pyomo>=6.10.0",
    "sqlalchemy>=2.0.48",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
battery = { path = ".", editable = true }

[tool.pixi.tasks]
optimize = "python src/optimization/optimization_pipeline.py"
data = "python src/data/extract_data.py"
dashboard = "PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python streamlit run src/dashboard/dashboard.py"
run = "python main.py"

[tool.pixi.dependencies]
ipopt = ">=3.14.19,<4"
python = "3.12.*"
numpy = ">=2.4.3,<3"
pandas = "<3"
psycopg = ">=3.3.3,<4"
pyomo = ">=6.10.0,<7"
sqlalchemy = ">=2.0.48,<3"
streamlit = ">=1.42"
plotly = ">=6.6.0,<7"
entsoe-py = ">=0.7.11,<0.8"
