[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arch>=8.0.0",
    "bentoml>=1.2.0",
    "entsoe-py>=0.8.0",
    "fastparquet>=2026.5.0",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
]
