[package]
name = "tolling_agreement_valuation"
version = "0.1.1"
edition = "2024"

[lib]
name = "tolling_agreement_valuation"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
ndarray-rand = "0.14"
numpy = { version = "0.27.1", optional = true }
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
rayon = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]
